# VE482-FA2018-public

./: .gitignore
p1/compile_guide/: CMakeLists.txt  Makefile  p1_compile_guide.tex
p1/driver/: CMakeLists.txt  Makefile  cmake.sh  driver.c  make.sh
p1/specifications/: p1_specifications.tex  tadoc.sty
p1/test/: README.md
p1/test/final_pretest/: README.md  case1.in  case1.out  case10.in  case11.in  case11.out  case12.in  case12.out  case13.in  case13.out  case14.in  case14.out  case15.in  case15.out  case16.in  case16.out  case17.in  case17.out  case18.in  case18.out  case19.in  case19.out  case2.in  case2.out  case20.in  case20.out  case21.in  case21.out  case22.in  case22.out  case23.in  case23.out  case24.in  case24.out  case3.in  case3.out  case4.in  case4.out  case5.in  case5.out  (+7 more)
p1/test/joj_final/: config.yaml
p1/test/joj_fp/: config.yaml
p1/test/joj_fp_mc/: cases  config.yaml
p1/test/joj_m1/: cases  config.yaml
p1/test/joj_m1_mc/: config.yaml
p1/test/joj_m2/: cases
p1/test/joj_m2_mc/: config.yaml
p1/test/milestone1/: README.md  case1.in  case10.in  case10.out  case11.in  case11.out  case12.in  case12.out  case13.in  case13.out  case14.in  case15.in  case16.in  case17.in  case18.in  case18.out  case2.in  case2.out  case3.in  case3.out  case4.in  case4.out  case5.in  case5.out  case6.in  case6.out  case7.in  case7.out  case8.in  case8.out  case9.in  case9.out  config.yaml
p1/test/milestone2/: README.md  case1.in  case1.out  case10.out  case11.in  case11.out  case12.in  case12.out  case13.in  case13.out  case14.in  case15.in  case15.out  (+21 more)
